# serializer version: 1
# name: test_session_e2e_publish_message
  [mqtt >]
  00000000  10 21 00 04 4d 51 54 54 05 c2 00 3c 00 00 00 00  |.!..MQTT...<....|
  00000010  08 75 73 65 72 6e 61 6d 65 00 08 70 61 73 73 77  |.username..passw|
  00000020  6f 72 64                                         |ord|
  [mqtt <]
  00000000  20 09 02 00 06 22 00 0a 21 00 14                 | ...."..!..|
  [mqtt >]
  00000000  30 41 00 07 74 6f 70 69 63 2d 31 00 31 2e 30 00  |0A..topic-1.1.0.|
  00000010  00 01 c8 00 00 23 82 68 a6 a2 23 00 65 00 20 91  |.....#.h..#.e. .|
  00000020  22 f1 91 1a 6e 89 71 ca ec 2d 44 2a 16 57 e7 5b  |"...n.q..-D*.W.[|
  00000030  4a 9a c8 97 4b 13 37 3b f5 81 13 45 7c e7 48 03  |J...K.7;...E|.H.|
  00000040  99 71 bf                                         |.q.|
# ---
# name: test_session_e2e_receive_message
  [mqtt >]
  00000000  10 21 00 04 4d 51 54 54 05 c2 00 3c 00 00 00 00  |.!..MQTT...<....|
  00000010  08 75 73 65 72 6e 61 6d 65 00 08 70 61 73 73 77  |.username..passw|
  00000020  6f 72 64                                         |ord|
  [mqtt <]
  00000000  20 09 02 00 06 22 00 0a 21 00 14                 | ...."..!..|
  [mqtt <]
  00000000  90 04 00 01 00 00                                |......|
  [mqtt >]
  00000000  82 0d 00 01 00 00 07 74 6f 70 69 63 2d 31 00     |.......topic-1.|
  [mqtt <]
  00000000  30 31 00 07 74 6f 70 69 63 2d 31 00 31 2e 30 00  |01..topic-1.1.0.|
  00000010  00 00 7b 00 00 23 82 68 a6 a2 23 00 66 00 10 45  |..{..#.h..#.f..E|
  00000020  3b c3 2b 12 a6 77 d9 55 f6 e0 89 f5 93 a5 30 5d  |;.+..w.U......0]|
  00000030  a0 72 fa                                         |.r.|
# ---
